--- a/config.env
+++ b/config.env
@@ -4,4 +4,14 @@ API_ID=
 API_HASH=""
 LIMIT_COUNT=
 DUMP_ID=
+CHANNEL_ID=
 SESSION1=" "
+SESSION2= " "
+SESSION3=" "
+SESSION4= " " 
+SESSION5=" "
+SESSION6= " " 
+SESSION7=" "
+SESSION8= " "
+SESSION9=" "
+SESSION10= " " 
